--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ma réu</string>
+    <string name= "dialog_title"> Ajouter une réunion </string>
 </resources>
