--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Ma réu</string>
     <string name= "dialog_title"> Ajouter une réunion </string>
+    <string name="item_menu">item menu</string>
+    <string name="item_1_AZ">Lieu de réunion: A -> Z</string>
+    <string name="item_2_ZA">Lieu de réunion: Z -> A</string>
+    <string name="item_3_chronological">Du plus récent au plus ancien</string>
+    <string name="item_4_anti_chronological">Du plus ancien au plus récent</string>
 </resources>
