--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="item_menu">item menu</string>
     <string name="item_1_AZ">Lieu de réunion: A -> Z</string>
     <string name="item_2_ZA">Lieu de réunion: Z -> A</string>
-    <string name="item_3_chronological">Du plus récent au plus ancien</string>
-    <string name="item_4_anti_chronological">Du plus ancien au plus récent</string>
+    <string name="item_3_chronological">Du plus ancien au plus récent</string>
+    <string name="item_4_anti_chronological">Du plus récent au plus ancien</string>
     <string name="hint_sujet" >Indiquez le sujet</string>
     <string name="hint_hour" >Indiquez l\'heure</string>
     <string name="hint_place" >Indiquez le lieu</string>
